--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 <td align="left"><p>(a.k.a. Lê Thanh Tâm) <br />
 <b>Assistant Professor</b>, <a href="https://www.ism.ac.jp/organization/sec_analysis_e.html" target=&ldquo;blank&rdquo;><b>Department of Statistical Inference and Mathematics</b></a>, <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;><b>The Institute of Statistical Mathematics (ISM)</b></a>. <br />
 Assistant Professor, <a href="https://www.ism.ac.jp/noe/sml-center/en/index.html" target=&ldquo;blank&rdquo;>Research Center for Statistical Machine Learning</a>, <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>ISM</a>. <br />
-Assistant Professor, <a href="https://www.ism.ac.jp/senkou_eng/" target=&ldquo;blank&rdquo;>Department of Statistical Science</a>, <a href="https://www.soken.ac.jp/en/index.html" target=&ldquo;blank&rdquo;>The Graduate School for Advanced Studies (SOKENDAI)</a>. <br />
+Assistant Professor, <a href="https://www.ism.ac.jp/senkou_eng/" target=&ldquo;blank&rdquo;>Statistical Science Program</a>, <a href="https://www.soken.ac.jp/en/index.html" target=&ldquo;blank&rdquo;>The Graduate School for Advanced Studies (SOKENDAI)</a>. <br />
 Visiting Scientist, <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/funct_anl_learn/" target=&ldquo;blank&rdquo;>Functional Analytic Learning Unit</a>, <a href="https://www.riken.jp/en/research/labs/aip/index.html" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>. <br /></p>
 </td></tr></table>
-<p>Research interests: Optimal transport, tree-Wasserstein geometry, Sobolev transport, geometric machine learning, Riemannian manifold, topological data analysis, kernel methods, robust algorithms. <br /></p>
+<p>Research interests: Optimal transport, tree-Wasserstein, Sobolev transport, geometric machine learning, Riemannian manifold, topological data analysis, kernel methods, robustness approach. <br /></p>
 <h2>Contact</h2>
 <div class="infoblock">
 <div class="blockcontent">
@@ -120,7 +120,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-05-07 15:37:42 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-06-08 23:00:31 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
