--- a/professional.html
+++ b/professional.html
@@ -49,7 +49,7 @@
 </li>
 <li><p>International Conference on Learning Representations (<b>ICLR</b>): 2020-2023</p>
 </li>
-<li><p>Journal of Machine Learning Research (<b>JMLR</b>): 2020(1), 2021(1)</p>
+<li><p>Journal of Machine Learning Research (<b>JMLR</b>): 2020(1), 2021(1), 2023(1)</p>
 </li>
 <li><p>Discrete and Computational Geometry Journal (DCG): 2021(1) </p>
 </li>
@@ -180,7 +180,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-05-07 15:37:42 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-06-08 23:00:31 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
