--- a/professional.html
+++ b/professional.html
@@ -32,7 +32,9 @@
 </ul>
 <p><b>Area Chair (Meta-Reviewer) / Senior Program Committee</b> </p>
 <ul>
-<li><p>Meta-reviewer, Machine Learning Journal (MLJ): 2022(1)</p>
+<li><p>AC, International Conference on Learning Representations (<b>ICLR</b>): 2024</p>
+</li>
+<li><p>Meta-reviewer, Machine Learning Journal (MLJ): 2022(1), 2023</p>
 </li>
 <li><p>SPC, International Joint Conference on Artificial Intelligence (IJCAI): 2021-2022</p>
 </li>
@@ -59,7 +61,7 @@
 </li>
 <li><p>International Joint Conference on Artificial Intelligence (IJCAI): 2018-2020</p>
 </li>
-<li><p>AAAI Conference on Artificial Intelligence (AAAI): 2020-2023</p>
+<li><p>AAAI Conference on Artificial Intelligence (AAAI): 2020-2024</p>
 </li>
 <li><p>Conference on Computer Vision and Pattern Recognition (CVPR): 2021</p>
 </li>
@@ -134,7 +136,7 @@
 </ul>
 <p><b>Conferences</b></p>
 <ul>
-<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2018-2022.</p>
+<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2018-2023.</p>
 </li>
 <li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2014, 2017-2022.</p>
 </li>
@@ -180,7 +182,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-06-08 23:00:31 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-08-16 17:12:21 +07, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
