--- a/code.html
+++ b/code.html
@@ -103,7 +103,7 @@
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-06-08 23:00:31 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-08-16 17:12:21 +07, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
