--- a/professional.html
+++ b/professional.html
@@ -32,6 +32,8 @@
 </ul>
 <p><b>Area Chair (Meta-Reviewer) / Senior Program Committee</b> </p>
 <ul>
+<li><p>AC, International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): 2024</p>
+</li>
 <li><p>AC, International Conference on Learning Representations (<b>ICLR</b>): 2024</p>
 </li>
 <li><p>Meta-reviewer, Machine Learning Journal (MLJ): 2022(1), 2023</p>
@@ -182,7 +184,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-08-16 17:12:21 +07, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-08-24 18:16:03 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
