--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-08-16 17:12:21 +07, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-08-24 18:16:03 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
