--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </li>
 </ul>
 <h2>Research Support</h2>
+<p><b>Grants</b>
+</p>
 <ul>
 <li><p>04/2023 - 03/2026, <a href="https://www.jsps.go.jp/english/e-grants/" target=&ldquo;blank&rdquo;>JSPS KAKENHI Grant number 23K11243</a>, Grants-in-Aid for Scientific Research (C) as PI (4.8M JPY). 
 </p>
@@ -80,6 +82,19 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 </li>
 <li><p>04/2017 - 03/2020, <a href="https://www.jsps.go.jp/english/e-grants/grants01.html" target=&ldquo;blank&rdquo;>JSPS KAKENHI Grant number 17K12745</a>, Grants-in-Aid for Young Scientists (B) as PI (4.1M JPY). 
+</p>
+</li>
+</ul>
+<p><b>Others</b>
+</p>
+<ul>
+<li><p>06/2022 - 03/2027, a collaborator in Data Science group led by Kenji Fukumizu (ISM), JSPS - Grant-in-Aid for Transformative Research Areas (A). 
+</p>
+</li>
+<li><p>04/2023 - 03/2024, a collaborator in a group led by Hideitsu Hino (ISM), Mitsui Information Co., Ltd grant. 
+</p>
+</li>
+<li><p>04/2023 - 03/2024, ISM Joint-research 2023-ISMCRP-2010 as PI.
 </p>
 </li>
 </ul>
@@ -157,7 +172,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-25 07:35:14 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-11-08 08:11:51 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
