--- a/professional.html
+++ b/professional.html
@@ -43,7 +43,7 @@
 <li><p>AC, International Conference on Learning Representations (<b>ICLR</b>): 2024
 </p>
 </li>
-<li><p>Meta-reviewer, Machine Learning Journal (MLJ): 2022(1), 2023
+<li><p>Meta-reviewer, Machine Learning Journal (MLJ): 2022-2023
 </p>
 </li>
 <li><p>SPC, International Joint Conference on Artificial Intelligence (IJCAI): 2021-2022
@@ -68,16 +68,16 @@
 <li><p>International Conference on Learning Representations (<b>ICLR</b>): 2020-2023
 </p>
 </li>
-<li><p>Journal of Machine Learning Research (<b>JMLR</b>): 2020(1), 2021(1), 2023(1)
+<li><p>Journal of Machine Learning Research (<b>JMLR</b>): 2020-2021, 2023
 </p>
 </li>
-<li><p>Discrete and Computational Geometry Journal (DCG): 2021(1) 
+<li><p>Discrete and Computational Geometry Journal (DCG): 2021 
 </p>
 </li>
-<li><p>Machine Learning Journal (MLJ): 2017(1), 2018(1), 2019(1)
+<li><p>Machine Learning Journal (MLJ): 2017-2019
 </p>
 </li>
-<li><p>Transactions on Pattern Analysis and Machine Intelligence (PAMI): 2021(1), 2022(1)
+<li><p>Transactions on Pattern Analysis and Machine Intelligence (PAMI): 2021-2022
 </p>
 </li>
 <li><p>International Joint Conference on Artificial Intelligence (IJCAI): 2018-2020
@@ -89,7 +89,7 @@
 <li><p>Conference on Computer Vision and Pattern Recognition (CVPR): 2021
 </p>
 </li>
-<li><p>Data Mining and Knowledge Discovery Journal (DMKD): 2016(1), 2017(1)
+<li><p>Data Mining and Knowledge Discovery Journal (DMKD): 2016-2017
 </p>
 </li>
 <li><p>Asian Conference on Machine Learning (ACML): 2013-2019
@@ -254,7 +254,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-25 07:35:14 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-11-08 08:11:51 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
