--- a/publication.html
+++ b/publication.html
@@ -119,6 +119,13 @@ Xinru Hua, Truyen Nguyen, <b>Tam Le</b>, Jose Blanchet, Viet Anh Nguyen
 </li>
 </ul>
 <ul>
+<li><p><a href="https://arxiv.org/pdf/2311.00927.pdf" target=&ldquo;blank&rdquo;><font color="blue">Scalable Counterfactual Distribution Estimation in Multivariate Causal Models</font></a> <br />
+ArXiv, 2023. <br />
+Thong Pham, Shohei Shimizu, Hideitsu Hino, <b>Tam Le</b>.
+</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/pdf/2308.15005.pdf" target=&ldquo;blank&rdquo;><font color="blue">Few-Shot Object Detection via Synthetic Features with Optimal Transport</font></a> <br />
 ArXiv, 2023. <br />
 Anh Khoa Nguyen Vu, Thanh-Toan Do, Vinh-Tiep Nguyen, <b>Tam Le</b>, Minh-Triet Tran, Tam V. Nguyen
@@ -200,6 +207,12 @@ PhD thesis, Kyoto University, Japan, 2015.
 <p><b>Workshop Posters</b>
 </p>
 <ul>
+<li><p>2023, <a href="https://arxiv.org/pdf/2310.13653.pdf" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport for Measures with Noisy Tree Metric</font></a>, <a href="https://otmlworkshop.github.io/" target=&ldquo;blank&rdquo;>NeurIPS workshop: Optimal Transport and Machine Learning</a>, US.
+</p>
+</li>
+<li><p>2023, <a href="https://www.dropbox.com/scl/fi/7m1exga71quydzjv9xtuk/TamLe_2023_Posters_ISM-Open-House.pdf?rlkey=mtvwyfl6ltootzvod43acgxr7&amp;dl=0" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport for Measures on a Graph</font></a>, ISM Open House, Virtual.
+</p>
+</li>
 <li><p>2022, <font color="blue">Sobolev Transport: A Scalable Metric for Probability Measures with Graph Metrics</font>, <a href="https://roisxtalk2022.rois.jp/english" target=&ldquo;blank&rdquo;>ROIS Crosstalk</a>, Virtual. 
 </p>
 </li>
@@ -212,7 +225,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 <li><p>2019, <font color="blue">Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</font>, <a href="http://aisociety.kr/KJMLW2019/" target=&ldquo;blank&rdquo;>Korea-Japan Machine Learning workshop</a>, Korea.
 </p>
 </li>
-<li><p>2018, <a href="https://www.dropbox.com/s/r6mabb120909khd/gimli_icml18_v04.pdf?dl=0" target=&ldquo;blank&rdquo;><font color="blue">Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</font></a>, <a href="http://gimli.cc/2018/" target=&ldquo;blank&rdquo;>ICML workshops (Geometry in Machine Learning)</a>, Sweden.
+<li><p>2018, <a href="https://www.dropbox.com/s/r6mabb120909khd/gimli_icml18_v04.pdf?dl=0" target=&ldquo;blank&rdquo;><font color="blue">Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</font></a>, <a href="http://gimli.cc/2018/" target=&ldquo;blank&rdquo;>ICML workshop: Geometry in Machine Learning</a>, Sweden.
 </p>
 </li>
 <li><p>2018, <font color="blue">Riemannian Manifold Kernel for Persistence Diagrams</font>, <a href="https://sites.google.com/view/aip-fau-mlgt-2018/home" target=&ldquo;blank&rdquo;>Transatlantic and Transpacific Workshop on Machine Learning and Discrete Optimization</a>, US. 
@@ -234,7 +247,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 <li><p>2023, <font color="blue">Optimal transport for measures on a graph</font>, Statistical Mathematics Seminar Series, Virtual. [<a href="https://www.dropbox.com/scl/fi/rvow9d86fywadaopjde61/TamLe_2023July_ISM-Seminar_40min.pdf?rlkey=7sns0m321yg9u1cfgukxvu58w&amp;dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
 </p>
 </li>
-<li><p>2023, <font color="blue">Optimal Transport with Local Structures for Large-Scale Applications</font>, CREST Seminar (<a href="https://www.jst.go.jp/kisoken/crest/en/project/1111105/1111105_2020.html" target=&ldquo;blank&rdquo;>Innovation of Deep Structured Models with Representation of Mathematical Intelligence</a>), Virtual. [<a href="https://www.dropbox.com/s/tzlgimrh1j3dv6a/TamLe_2023Jan_CREST%20Seminar.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
+<li><p>2023, <font color="blue">Optimal Transport with Local Structures for Large-Scale Applications</font>, CREST Seminar: <a href="https://www.jst.go.jp/kisoken/crest/en/project/1111105/1111105_2020.html" target=&ldquo;blank&rdquo;>Innovation of Deep Structured Models with Representation of Mathematical Intelligence</a>, Virtual. [<a href="https://www.dropbox.com/s/tzlgimrh1j3dv6a/TamLe_2023Jan_CREST%20Seminar.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
 </p>
 </li>
 <li><p>2022, <font color="blue">Optimal Transport and Its Applications on Machine Learning</font>, Statistical Mathematics Seminar Series, Virtual. [<a href="https://www.dropbox.com/s/hymi91etc7crl5e/TamLe_2022Nov_ISM%20Seminar_40min.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
@@ -279,7 +292,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-25 07:35:14 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-11-08 08:11:51 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
