--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 <p><b>Others</b>
 </p>
 <ul>
-<li><p>06/2022 - 03/2027, a collaborator in Data Science group led by Kenji Fukumizu (ISM), JSPS - Grant-in-Aid for Transformative Research Areas (A). 
+<li><p>06/2022 - 03/2027, a collaborator in Data Science group led by Professor Kenji Fukumizu (ISM), JSPS - Grant-in-Aid for Transformative Research Areas (A). 
 </p>
 </li>
-<li><p>04/2023 - 03/2024, a collaborator in a group led by Hideitsu Hino (ISM), Mitsui Information Co., Ltd grant. 
+<li><p>04/2023 - 03/2024, a collaborator in a group led by Professor Hideitsu Hino (ISM), Mitsui Information Co., Ltd grant. 
 </p>
 </li>
 <li><p>04/2023 - 03/2024, ISM Joint-research 2023-ISMCRP-2010 as PI.
@@ -172,7 +172,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-08 08:11:51 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-11-08 08:13:52 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
