--- a/index.html
+++ b/index.html
@@ -23,13 +23,16 @@
 <table class="imgtable"><tr><td>
 <a href="TamLeANU13.jpg"><img src="TamLeANU13.jpg" alt="Tam Le" width="150px" height="178px" /></a>&nbsp;</td>
 <td align="left"><p>(a.k.a. Lê Thanh Tâm) <br />
-<b>Assistant Professor</b>, <a href="https://www.ism.ac.jp/organization/sec_analysis_e.html" target=&ldquo;blank&rdquo;><b>Department of Statistical Inference and Mathematics</b></a>, <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;><b>The Institute of Statistical Mathematics (ISM)</b></a>. <br />
-Assistant Professor, <a href="https://www.ism.ac.jp/noe/sml-center/en/index.html" target=&ldquo;blank&rdquo;>Research Center for Statistical Machine Learning</a>, <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>ISM</a>. <br />
-Assistant Professor, <a href="https://www.ism.ac.jp/senkou_eng/" target=&ldquo;blank&rdquo;>Statistical Science Program</a>, <a href="https://www.soken.ac.jp/en/index.html" target=&ldquo;blank&rdquo;>The Graduate School for Advanced Studies (SOKENDAI)</a>. <br />
+<a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;><b>The Institute of Statistical Mathematics (ISM)</b></a> <br />
+Assistant Professor, <a href="https://www.ism.ac.jp/organization/sec_analysis_e.html" target=&ldquo;blank&rdquo;>Department of Statistical Inference and Mathematics</a> <br />
+Assistant Professor, <a href="https://www.ism.ac.jp/noe/sml-center/en/index.html" target=&ldquo;blank&rdquo;>Research Center for Statistical Machine Learning</a> <br />
+<br /> 
+Concurrent affiliation: <br />
 Visiting Scientist, <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/funct_anl_learn/" target=&ldquo;blank&rdquo;>Functional Analytic Learning Team</a>, <a href="https://www.riken.jp/en/research/labs/aip/index.html" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>. <br />
+Assistant Professor, <a href="https://www.ism.ac.jp/senkou_eng/" target=&ldquo;blank&rdquo;>Statistical Science Program</a>, <a href="https://www.soken.ac.jp/en/index.html" target=&ldquo;blank&rdquo;>The Graduate School for Advanced Studies (SOKENDAI)</a>. <br />
 </p>
 </td></tr></table>
-<p>Research interests: Optimal transport, tree-Wasserstein, Sobolev transport, geometric machine learning, Riemannian manifold, topological data analysis, kernel methods, robustness approach. <br />
+<p>Research interests: Machine learning, optimal transport, tree-Wasserstein, Sobolev transport, geometric machine learning, kernel methods. <br />
 </p>
 <h2>Contact</h2>
 <div class="infoblock">
@@ -61,15 +64,6 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 <li><p>01-Sep-2022, I officially join in <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>The Institute of Statistical Mathematics (ISM)</a> as Assistant Professor. I am also an Assistant Professor at <a href="https://www.soken.ac.jp/en/index.html" target=&ldquo;blank&rdquo;>The Graduate School for Advanced Studies (SOKENDAI)</a>.
 </p>
 </li>
-<li><p>26-Jul-2022, I give an invited talk at Kyoto Machine Learning workshop.
-</p>
-</li>
-<li><p>27-May-2022, I give an invited talk at <a href="https://sites.google.com/kyoto-u.ac.jp/apatg" target=&ldquo;blank&rdquo;>Asia Pacific Seminar on Applied Topology and Geometry (APATG)</a>. [<a href="https://www.dropbox.com/s/hd8c61gui6n55py/TamLe_APATG2022_Slide.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
-</p>
-</li>
-<li><p>01-Mar-2022, I give an invited talk at the AAAI workshop (<a href="https://ot-sdm.github.io/" target=&ldquo;blank&rdquo;>OT-SDM: International Workshop on Optimal Transport and Structured Data Modeling</a>). [<a href="https://www.dropbox.com/s/4l37iw738ivtn0h/TamLe_AAAI22%20Workshop_OTSDM.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
-</p>
-</li>
 </ul>
 <h2>Research Support</h2>
 <p><b>Grants</b>
@@ -88,10 +82,10 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 <p><b>Others</b>
 </p>
 <ul>
-<li><p>06/2022 - 03/2027, a collaborator in Data Science group led by Professor Kenji Fukumizu (ISM), JSPS - Grant-in-Aid for Transformative Research Areas (A). 
+<li><p>06/2022 - 03/2027, a collaborator in Data Science group led by <a href="https://www.ism.ac.jp/~fukumizu/" target=&ldquo;blank&rdquo;>Professor Kenji Fukumizu</a> (ISM), JSPS - Grant-in-Aid for Transformative Research Areas (A). 
 </p>
 </li>
-<li><p>04/2023 - 03/2024, a collaborator in a group led by Professor Hideitsu Hino (ISM), Mitsui Information Co., Ltd grant. 
+<li><p>04/2023 - 03/2024, a collaborator in a group led by <a href="https://sites.google.com/view/hinohide/" target=&ldquo;blank&rdquo;>Professor Hideitsu Hino</a> (ISM), Mitsui Information Co., Ltd grant. 
 </p>
 </li>
 <li><p>04/2023 - 03/2024, ISM Joint-research 2023-ISMCRP-2010 as PI.
@@ -121,10 +115,10 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 <li><p>12/2022 - present, Visiting Scientist, <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/funct_anl_learn/" target=&ldquo;blank&rdquo;>Functional Analytic Learning Team</a>, <a href="https://www.riken.jp/en/research/labs/aip/index.html" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>.
 </p>
 </li>
-<li><p>03/2023 - present, Assistant Professor, <a href="https://www.ism.ac.jp/noe/sml-center/en/index.html" target=&ldquo;blank&rdquo;>Research Center for Statistical Machine Learning</a>, <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>The Institute of Statistical Mathematics (ISM)</a>. <br />
+<li><p>03/2023 - present, Assistant Professor, <a href="https://www.ism.ac.jp/noe/sml-center/en/index.html" target=&ldquo;blank&rdquo;>Research Center for Statistical Machine Learning</a>, <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>The Institute of Statistical Mathematics (ISM)</a>. [concurrent affiliation]
 </p>
 </li>
-<li><p>09/2022 - present, Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldquo;blank&rdquo;>The Graduate School for Advanced Studies (SOKENDAI)</a>.
+<li><p>09/2022 - present, Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldquo;blank&rdquo;>The Graduate School for Advanced Studies (SOKENDAI)</a>. [concurrent affiliation]
 </p>
 </li>
 <li><p>08/2021 - 08/2022, Research Scientist, <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>.
@@ -172,7 +166,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-08 08:13:52 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-12-30 15:47:46 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
