--- a/publication.html
+++ b/publication.html
@@ -106,7 +106,7 @@ Machine Learning Journal (<b>MLJ</b>), 2014. <br />
 </p>
 <ul>
 <li><p><a href="https://arxiv.org/pdf/2310.13653.pdf" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport for Measures with Noisy Tree Metric</font></a> <br />
-ArXiv, 2023. <br />
+NeurIPS OTML workshop, 2023. <br />
 <b>Tam Le</b>, Truyen Nguyen, Kenji Fukumizu.
 </p>
 </li>
@@ -207,7 +207,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 <p><b>Workshop Posters</b>
 </p>
 <ul>
-<li><p>2023, <a href="https://arxiv.org/pdf/2310.13653.pdf" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport for Measures with Noisy Tree Metric</font></a>, <a href="https://otmlworkshop.github.io/" target=&ldquo;blank&rdquo;>NeurIPS workshop: Optimal Transport and Machine Learning</a>, US.
+<li><p>2023, <a href="https://arxiv.org/pdf/2310.13653.pdf" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport for Measures with Noisy Tree Metric</font></a>, <a href="https://otmlworkshop.github.io/" target=&ldquo;blank&rdquo;>NeurIPS workshop: Optimal Transport and Machine Learning (OTML)</a>, US.
 </p>
 </li>
 <li><p>2023, <a href="https://www.dropbox.com/scl/fi/7m1exga71quydzjv9xtuk/TamLe_2023_Posters_ISM-Open-House.pdf?rlkey=mtvwyfl6ltootzvod43acgxr7&amp;dl=0" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport for Measures on a Graph</font></a>, ISM Open House, Virtual.
@@ -292,7 +292,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-08 08:13:52 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-12-30 15:47:46 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
