--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <h2>News</h2>
 <ul>
+<li><p>20-Jan-2024, Our paper, entitled <a href="https://arxiv.org/pdf/2310.13653.pdf" target=&ldquo;blank&rdquo;>&ldquo;Optimal Transport for Measures with Noisy Tree Metric&rdquo;</a> has been accepted to <a href="http://aistats.org/aistats2024/" target=&ldquo;blank&rdquo;><b>AISTATS&rsquo;24</b></a>! This is joint work with Truyen Nguyen and Kenji Fukumizu.  
+</p>
+</li>
+<li><p>16-Jan-2024, I give an invited talk at <a href="https://ims.nus.edu.sg/events/the-mathematics-of-data/" target=&ldquo;blank&rdquo;>The Mathematics of Data program &ndash; Workshop on Optimal Transport and PDEs</a>, IMS, NUS, Singapore. [<a href="https://www.dropbox.com/scl/fi/r5weqj7u1ue01nykzrljx/TamLe_IMS2024_The-Mathematics-of-Data.pdf?rlkey=utlujdbteoojzivxbnfwxcono&amp;dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
+</p>
+</li>
+<li><p>13-Jan-2024, Our causal inference paper, entitled <a href="https://arxiv.org/pdf/2311.00927.pdf" target=&ldquo;blank&rdquo;>&ldquo;Scalable Counterfactual Distribution Estimation in Multivariate Causal Models&rdquo;</a> has been accepted to <a href="https://www.cclear.cc/2024/" target=&ldquo;blank&rdquo;><i>CLeaR&rsquo;24</i></a>! This is joint work with Thong Pham, Shohei Shimizu and Hideitsu Hino.  
+</p>
+</li>
 <li><p>24-Aug-2023, I will serve as Area Chair for <a href="http://aistats.org/aistats2024/" target=&ldquo;blank&rdquo;><b>AISTATS&rsquo;24</b></a> and <a href="https://iclr.cc/" target=&ldquo;blank&rdquo;><b>ICLR&rsquo;24</b></a>.
 </p>
 </li>
@@ -82,10 +91,10 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 <p><b>Others</b>
 </p>
 <ul>
-<li><p>06/2022 - 03/2027, a collaborator in Data Science group led by <a href="https://www.ism.ac.jp/~fukumizu/" target=&ldquo;blank&rdquo;>Professor Kenji Fukumizu</a> (ISM), JSPS - Grant-in-Aid for Transformative Research Areas (A). 
+<li><p>06/2022 - 03/2027, a collaborator in Data Science group led by <a href="https://www.ism.ac.jp/~fukumizu/" target=&ldquo;blank&rdquo;>Kenji Fukumizu</a> (ISM), JSPS - Grant-in-Aid for Transformative Research Areas (A). 
 </p>
 </li>
-<li><p>04/2023 - 03/2024, a collaborator in a group led by <a href="https://sites.google.com/view/hinohide/" target=&ldquo;blank&rdquo;>Professor Hideitsu Hino</a> (ISM), Mitsui Information Co., Ltd grant. 
+<li><p>04/2023 - 03/2024, a collaborator in a group led by <a href="https://sites.google.com/view/hinohide/" target=&ldquo;blank&rdquo;>Hideitsu Hino</a> (ISM), Mitsui Information Co., Ltd grant. 
 </p>
 </li>
 <li><p>04/2023 - 03/2024, ISM Joint-research 2023-ISMCRP-2010 as PI.
@@ -97,7 +106,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 <li><p>10/2012 - 09/2015, PhD program, <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Graduate school of Informatics</a>, <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University, Japan</a>.
 </p>
 <ul>
-<li><p>Supervisors: <a href="http://marcocuturi.net/" target=&ldquo;blank&rdquo;>Professor <b>Marco</b> <b>Cuturi</b></a>, <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html" target=&ldquo;blank&rdquo;>Professor <b>Akihiro</b> <b>Yamamoto</b></a>.
+<li><p>Supervisors: <a href="http://marcocuturi.net/" target=&ldquo;blank&rdquo;><b>Marco</b> <b>Cuturi</b></a> and <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html" target=&ldquo;blank&rdquo;><b>Akihiro</b> <b>Yamamoto</b></a>.
 </p>
 </li>
 <li><p>I completed my PhD program in September, 2015 and officially received my PhD degree in January, 2016.
@@ -124,7 +133,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 <li><p>08/2021 - 08/2022, Research Scientist, <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>.
 </p>
 <ul>
-<li><p>Mentor: <a href="https://riken-yamada.github.io/profile.html" target=&ldquo;blank&rdquo;>Professor Makoto Yamada</a>
+<li><p>Mentor: <a href="https://riken-yamada.github.io/profile.html" target=&ldquo;blank&rdquo;>Makoto Yamada</a>
 </p>
 </li>
 <li><p>This position requires at least 5-year research experience after Ph.D.
@@ -134,28 +143,28 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 <li><p>09/2017 - 07/2021, Postdoctoral Researcher, <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>.
 </p>
 <ul>
-<li><p>Mentor: <a href="https://riken-yamada.github.io/profile.html" target=&ldquo;blank&rdquo;>Professor Makoto Yamada</a>
+<li><p>Mentor: <a href="https://riken-yamada.github.io/profile.html" target=&ldquo;blank&rdquo;>Makoto Yamada</a>
 </p>
 </li></ul>
 </li>
 <li><p>02/2016 - 08/2017, Postdoctoral Researcher, <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Nagoya Institute of Technology</a> &amp; <a href="https://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>National Institute for Materials Science, Japan</a>.
 </p>
 <ul>
-<li><p>Mentor: <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Professor Ichiro Takeuchi</a>.
+<li><p>Mentor: <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Ichiro Takeuchi</a>.
 </p>
 </li></ul>
 </li>
 <li><p>01/2016, Associate Researcher, <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Nagoya Institute of Technology, Japan</a>.
 </p>
 <ul>
-<li><p>Mentor: <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Professor Ichiro Takeuchi</a>.
+<li><p>Mentor: <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Ichiro Takeuchi</a>.
 </p>
 </li></ul>
 </li>
 <li><p>10/2015 - 12/2015, Associate Researcher, <a href="http://www.iip.ist.i.kyoto-u.ac.jp/index-e.html" target=&ldquo;blank&rdquo;>Kyoto University, Japan</a>.
 </p>
 <ul>
-<li><p>Mentors: <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html" target=&ldquo;blank&rdquo;>Professor Akihiro Yamamoto</a>, <a href="http://marcocuturi.net/" target=&ldquo;blank&rdquo;>Professor Marco Cuturi</a>.
+<li><p>Mentors: <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html" target=&ldquo;blank&rdquo;>Akihiro Yamamoto</a> and <a href="http://marcocuturi.net/" target=&ldquo;blank&rdquo;>Marco Cuturi</a>.
 </p>
 </li>
 </ul>
@@ -166,7 +175,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-12-30 15:47:46 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-01-21 15:59:16 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
