--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 <li><p>16-Jan-2024, I give an invited talk at <a href="https://ims.nus.edu.sg/events/the-mathematics-of-data/" target=&ldquo;blank&rdquo;>The Mathematics of Data program &ndash; Workshop on Optimal Transport and PDEs</a>, IMS, NUS, Singapore. [<a href="https://www.dropbox.com/scl/fi/r5weqj7u1ue01nykzrljx/TamLe_IMS2024_The-Mathematics-of-Data.pdf?rlkey=utlujdbteoojzivxbnfwxcono&amp;dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
 </p>
 </li>
-<li><p>13-Jan-2024, Our causal inference paper, entitled <a href="https://arxiv.org/pdf/2311.00927.pdf" target=&ldquo;blank&rdquo;>&ldquo;Scalable Counterfactual Distribution Estimation in Multivariate Causal Models&rdquo;</a> has been accepted to <a href="https://www.cclear.cc/2024/" target=&ldquo;blank&rdquo;><i>CLeaR&rsquo;24</i></a>! This is joint work with Thong Pham, Shohei Shimizu and Hideitsu Hino.  
+<li><p>13-Jan-2024, Our paper on optimal transport for causal inference, entitled <a href="https://arxiv.org/pdf/2311.00927.pdf" target=&ldquo;blank&rdquo;>&ldquo;Scalable Counterfactual Distribution Estimation in Multivariate Causal Models&rdquo;</a> has been accepted to <a href="https://www.cclear.cc/2024/" target=&ldquo;blank&rdquo;><i>CLeaR&rsquo;24</i></a>! This is joint work with Thong Pham, Shohei Shimizu and Hideitsu Hino.  
 </p>
 </li>
 <li><p>24-Aug-2023, I will serve as Area Chair for <a href="http://aistats.org/aistats2024/" target=&ldquo;blank&rdquo;><b>AISTATS&rsquo;24</b></a> and <a href="https://iclr.cc/" target=&ldquo;blank&rdquo;><b>ICLR&rsquo;24</b></a>.
@@ -175,7 +175,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-21 15:59:16 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-01-21 23:17:38 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
