--- a/publication.html
+++ b/publication.html
@@ -26,7 +26,8 @@
 <ul>
 <li><p><a href="https://arxiv.org/pdf/2310.13653.pdf" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport for Measures with Noisy Tree Metric</font></a> <br />
 International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>), 2024. (<i>Acceptance rate: 546/1980</i>) <br /> 
-<b>Tam Le</b>, Truyen Nguyen, Kenji Fukumizu.
+<b>Tam Le</b>, Truyen Nguyen, Kenji Fukumizu. <br />
+(Preliminary workshop version in NeurIPS workshop: OTML, 2023)
 </p>
 </li>
 </ul>
@@ -91,6 +92,7 @@ Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi
 <li><p><a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams.pdf" target=&ldquo;blank&rdquo;><font color="blue">Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</font></a>. [<a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams-supplemental.zip" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/o99zja0qtzpdzci/TLMY_NIPS18_PFKernel_PD.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>]  <br />
 Neural Information Processing Systems (<b>NeurIPS/NIPS</b>), 2018. (<i>Acceptance rate: 1011/4856</i>) <br />
 <b>Tam Le</b>, Makoto Yamada
+(Preliminary workshop version in ICML workshop: GML, 2018)
 </p>
 </li>
 </ul>
@@ -295,7 +297,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-21 23:17:38 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-01-22 21:32:10 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
