--- a/publication.html
+++ b/publication.html
@@ -27,7 +27,7 @@
 <li><p><a href="https://arxiv.org/pdf/2310.13653.pdf" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport for Measures with Noisy Tree Metric</font></a> <br />
 International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>), 2024. (<i>Acceptance rate: 546/1980</i>) <br /> 
 <b>Tam Le</b>, Truyen Nguyen, Kenji Fukumizu. <br />
-(Preliminary workshop version in NeurIPS workshop: OTML, 2023)
+(<i>Preliminary workshop version in NeurIPS workshop: OTML, 2023</i>)
 </p>
 </li>
 </ul>
@@ -41,21 +41,21 @@ International Conference on Artificial Intelligence and Statistics (<b>AISTATS</
 <ul>
 <li><p><a href="https://proceedings.mlr.press/v151/le22b/le22b.pdf" target=&ldquo;blank&rdquo;><font color="blue">Sobolev Transport: A Scalable Metric for Probability Measures with Graph Metrics</font></a> .  [<a href="https://slideslive.com/38980758/sobolev-transport-a-scalable-metric-for-probability-measures-with-graph-metrics?ref=speaker-17801" target=&ldquo;blank&rdquo;>Video</a>/<a href="https://proceedings.mlr.press/v151/le22b/le22b-supp.zip" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/eg4pw4rw960bho1/LNPN_AISTATS2022_SobolevTransport_Poster.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>), 2022. (<i>Acceptance rate: 492/1685</i>) <br /> 
-<b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Dinh Phung, Viet Anh Nguyen
+<b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Dinh Phung, Viet Anh Nguyen.
 </p>
 </li>
 </ul>
 <ul>
 <li><p><a href="https://proceedings.neurips.cc/paper/2021/file/8cfef17bee2b7a75a3ce09d40b497f6b-Paper.pdf" target=&ldquo;blank&rdquo;><font color="blue">Adversarial Regression with Doubly Non-negative Weighting Matrices</font></a>. [<a href="https://proceedings.neurips.cc/paper/2021/file/8cfef17bee2b7a75a3ce09d40b497f6b-Supplemental.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/aenyabi9mq5vk37/TamLe_NeurIPS2021_AdvReg_Slide.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>/<a href="https://www.dropbox.com/s/gbwdqbu5pobpymo/LNBN_NeurIPS21_AdvReg.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 Neural Information Processing Systems (<b>NeurIPS/NIPS</b>), 2021. (<i>Acceptance rate: 2334/9122</i>) <br />
-<b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Makoto Yamada, Jose Blanchet, Viet Anh Nguyen
+<b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Makoto Yamada, Jose Blanchet, Viet Anh Nguyen.
 </p>
 </li>
 </ul>
 <ul>
 <li><p><a href="http://proceedings.mlr.press/v139/nguyen21d/nguyen21d.pdf" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport Kernels for Sequential and Parallel Neural Architecture Search</font></a>. [<a href="http://proceedings.mlr.press/v139/nguyen21d/nguyen21d-supp.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/nivgnbd2wjad4cp/VNTLMYMO_ICML21_NAS_BO_TW.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 International Conference on Machine Learning (<b>ICML</b>), 2021. (<i>Acceptance rate: 1184/5513</i>) <br />
-Vu Nguyen<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Makoto Yamada, Michael A. Osborne
+Vu Nguyen<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Makoto Yamada, Michael A. Osborne.
 </p>
 </li>
 </ul>
@@ -70,43 +70,43 @@ International Conference on Artificial Intelligence and Statistics (<b>AISTATS</
 <ul>
 <li><p><a href="http://proceedings.mlr.press/v130/le21b/le21b.pdf" target=&ldquo;blank&rdquo;><font color="blue">Flow-based Alignment Approaches for Probability Measures in Different Spaces</font></a> . [<a href="https://slideslive.com/38953310/flowbased-alignment-approaches-for-probability-measures-in-different-spaces?ref=speaker-17801-latest" target=&ldquo;blank&rdquo;>Video</a>/<a href="http://proceedings.mlr.press/v130/le21b/le21b-supp.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/vc09k731yh20nhv/TLNHMY_AISTATS2021_FlowAlign.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>), 2021. (<i>Acceptance rate: 455/1527</i>) <br /> 
-<b>Tam Le</b><font color="red">*</font>, Nhat Ho<font color="red">*</font>, Makoto Yamada
+<b>Tam Le</b><font color="red">*</font>, Nhat Ho<font color="red">*</font>, Makoto Yamada.
 </p>
 </li>
 </ul>
 <ul>
 <li><p><a href="https://papers.nips.cc/paper/9396-tree-sliced-variants-of-wasserstein-distances.pdf" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Variants of Wasserstein Distances</font></a>. [<a href="https://papers.nips.cc/paper/9396-tree-sliced-variants-of-wasserstein-distances-supplemental.zip" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/4ugbmyu5jepxun0/TLMYKFMC_NeurIPS19_TSW.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 Neural Information Processing Systems (<b>NeurIPS/NIPS</b>), 2019. (<i>Acceptance rate: 1428/6743</i>) <br /> 
-<b>Tam Le</b>, Makoto Yamada, Kenji Fukumizu, Marco Cuturi
+<b>Tam Le</b>, Makoto Yamada, Kenji Fukumizu, Marco Cuturi.
 </p>
 </li>
 </ul>
 <ul>
 <li><p><a href="http://proceedings.mlr.press/v97/ndiaye19a/ndiaye19a.pdf" target=&ldquo;blank&rdquo;><font color="blue">Safe Grid Search with Optimal Complexity</font></a>. [<a href="http://proceedings.mlr.press/v97/ndiaye19a/ndiaye19a-supp.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/f4appwq8sghnz31/poster_icml2019_ndiaye_final.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>]  <br />
 International Conference on Machine Learning (<b>ICML</b>), 2019. (<i>Acceptance rate: 773/3424</i>) <br />
-Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi
+Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi.
 </p>
 </li>
 </ul>
 <ul>
 <li><p><a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams.pdf" target=&ldquo;blank&rdquo;><font color="blue">Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</font></a>. [<a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams-supplemental.zip" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/o99zja0qtzpdzci/TLMY_NIPS18_PFKernel_PD.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>]  <br />
 Neural Information Processing Systems (<b>NeurIPS/NIPS</b>), 2018. (<i>Acceptance rate: 1011/4856</i>) <br />
-<b>Tam Le</b>, Makoto Yamada
-(Preliminary workshop version in ICML workshop: GML, 2018)
+<b>Tam Le</b>, Makoto Yamada. <br />
+(<i>Preliminary workshop version in ICML workshop: GML, 2018</i>)
 </p>
 </li>
 </ul>
 <ul>
 <li><p><a href="http://proceedings.mlr.press/v37/le15.pdf" target=&ldquo;blank&rdquo;><font color="blue">Unsupervised Riemannian Metric Learning for Histograms Using Aitchison Transformations</font></a>. [<a href="http://videolectures.net/icml2015_le_histograms/?q=Tam\\%20Le" target=&ldquo;blank&rdquo;>Video</a>/<a href="http://proceedings.mlr.press/v37/le15-supp.pdf" target=&ldquo;blank&rdquo;>Supplemental</a>/<a href="https://www.dropbox.com/s/vj4gsgnazrhlvdt/TL.MC.ICML2015.Slide.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>/<a href="https://www.dropbox.com/s/4zboqoil7gwn3i1/TL.MC.ICML2015.Poster.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 International Conference on Machine Learning (<b>ICML</b>), 2015. (<i>Acceptance rate: 270/1037</i>) <br />
-<b>Tam Le</b>, Marco Cuturi
+<b>Tam Le</b>, Marco Cuturi.
 </p>
 </li>
 </ul>
 <ul>
 <li><p><a href="https://www.dropbox.com/s/ag7hy2v7wdilu4j/TL.MC.MLJ2014.pdf?dl=0" target=&ldquo;blank&rdquo;><font color="blue">Adaptive Euclidean Maps for Histograms: Generalized Aitchison Embeddings</font></a> <br />
 Machine Learning Journal (<b>MLJ</b>), 2014. <br />
-<b>Tam Le</b>, Marco Cuturi
+<b>Tam Le</b>, Marco Cuturi.
 </p>
 </li>
 </ul>
@@ -297,7 +297,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-22 21:32:10 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-01-22 21:35:56 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
