--- a/publication.html
+++ b/publication.html
@@ -107,6 +107,7 @@ International Conference on Machine Learning (<b>ICML</b>), 2015. (<i>Acceptance
 <li><p><a href="https://www.dropbox.com/s/ag7hy2v7wdilu4j/TL.MC.MLJ2014.pdf?dl=0" target=&ldquo;blank&rdquo;><font color="blue">Adaptive Euclidean Maps for Histograms: Generalized Aitchison Embeddings</font></a> <br />
 Machine Learning Journal (<b>MLJ</b>), 2014. <br />
 <b>Tam Le</b>, Marco Cuturi.
+(<i>Preliminary conference version in ACML, 2013</i>)
 </p>
 </li>
 </ul>
@@ -297,7 +298,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-22 21:35:56 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-01-22 21:51:14 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
